Jan 26th HW full

--- a/main.tex
+++ b/main.tex
@@ -2673,23 +2673,26 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H14-03 - T/F question (Basic selection) \\
     EP filed 12 March 2015; claims priority from P-NL filed 16 June 2014.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] The "first" renewal fee is due on... \textbf{(a.1)} 31/03/16, \textbf{(a.2)} 31/03/17, \textbf{(a.3)} 31/03/18.
-        \item[\textbf{(b)}] Last day for payment (no additional fee) for 3rd year is... \textbf{(b.3)} 31/03/18, \textbf{(b.4)} 02/04/18.
-        \item[\textbf{(c)}] Last day for payment (with additional fee) for 3rd year is... \textbf{(c.2)} 30/09/17, \textbf{(c.3)} 02/10/17.
-        \item[\textbf{(d)}] Last day for payment (no additional fee) for 4th year is... \textbf{(d.2)} 31/03/18, \textbf{(d.4)} 03/04/18.
+        \item[\textbf{(a)}] The "first" renewal fee is due on... \textbf{(a.1)} 31/03/16, \textbf{(a.2)} \underline{\textbf{31/03/17}}, \textbf{(a.3)} 31/03/18.
+        \item[\textbf{(b)}] Last day for payment (no additional fee) for 3rd year is also \underline{\textbf{31/03/17}} since EPO is not closed on that day. 
+        \item[\textbf{(c)}] Last day for payment (with additional fee) for 3rd year is... \textbf{(c.2)} 30/09/17, \textbf{(c.3)} \underline{\textbf{02/10/17}}.
+        \item[\textbf{(d)}] Last day for payment (no additional fee) for 4th year is... \textbf{(d.2)} 31/03/18, \textbf{(d.4)} \underline{\textbf{03/04/18}}.
+        \item[\textbf{(e)}] The last day for valid payment, with additional fee, of the renewal fee in respect of the fourth year is \underline{\textbf{01/10/18}} (\textit{de ultimo ad ultimo} from due date + \ru{134(1)}). 
     \end{itemize}
 
   \vspace{1cm}
 
     % --- QUESTION 8 ---
     \item H14-05 - T/F question (Basic selection)
+    (a) A renewal fee has not been paid before or on the due date.   For each of the statements below, indicate whether the statement is true or false.   
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a.1-4)}] Remedy for missed renewal fee: 2 months or 6 months? From due date or communication?
-        \item[\textbf{(a.5-6)}] If fee + 50\% not paid: application deemed withdrawn or refused?
-        \item[\textbf{(a.7-8)}] Remedy if additional period missed: FP or RE?
-        \item[\textbf{(b)}] Non-payment takes effect on: due date or expiry of additional period?
-        \item[\textbf{(c)}] Renewal fee refund: if requested on/before due date, or if application not pending?
-    \end{itemize}
-
+    \item[ \textbf{(a.1)}]  A time limit of 2 months applies to remedy the deficiency; the remedy consists of payment of the missed renewal fee together with an additional 50\% \F -- 6 months
+        \item[\textbf{(a.2)}] A time limit of 2 months from a communication informing the applicant of a loss-of-rights applies to remedy the deficiency; the remedy consists of payment of the missed renewal fee together with an additional 50\%. \F -- 6 months
+        \item[\textbf{(a.3)}] A time limit of 6 months applies to remedy the deficiency; the remedy consists of payment of the missed renewal fee together with an additional 50\% \T -- \ru{51(2)}. 
+        \item[\textbf{(a.4)}] A time limit of 6 months from a communication informing the applicant of a loss-of-rights applies to remedy the deficiency; the remedy consists of payment of the missed renewal fee together with an additional 50\% \F -- not from loss-of-rights comm.
+        \item[\textbf{(a.5--8)}] If the missed renewal fee and the additional 50\% are not timely paid --- application is deemed withdrawn and you need to request \textbf{RE}.
+        \item[\textbf{(b.1--2)}] The deficiency due to non-payment of the renewal fee takes effect on the expiry of the additional \textbf{6m} period for payment of the additional fee; NOT on the due date!
+        \item[\textbf{(c.1--3)}] The renewal fee may be refunded if the fee has been \textit{not validly} paid, e.g., application was not pending on the due date, or if refund requested \textbf{in respect the 4th or later year substantially more than 3 months before the due date}. 
+    \end{itemize}  
 \end{enumerate}
 \end{document}
